testsuite/tests/grammar/invalid_error_node/test_error_and_list/test.lkt
from common import FooNode, Example

class ErrorDecl : ASTList[Example] implements ErrorNode {
}
